# notion-prettify

./: .gitignore  NotionPrettify.spec  README.md  main.py  pyproject.toml
scripts/: build_macos.sh  build_windows.bat
src/notion_prettify_gui/: app.py  styles.py
src/notion_prettify_gui/models/: options.py
src/notion_prettify_gui/services/: cfg_loader.py  runner.py  zip_handler.py
src/notion_prettify_gui/widgets/: file_section.py  metadata_section.py  options_section.py
