[project]
name = "notion-prettify"
version = "0.1.0"
description = "GUI wrapper for the bs-notion-export-prettify module"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.8.0",
    "bs-notion-export-prettify>=1.4.4",
]

[project.scripts]
notion-prettify-gui = "notion_prettify_gui.app:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
mypy_path = "src"
strict = true
python_version = "3.14"
ignore_missing_imports = true
sqlite_cache = false

[[tool.mypy.overrides]]
module = "notion_prettify_gui.widgets.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "notion_prettify_gui.app"
disable_error_code = ["misc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_prettify_gui"]
